--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "vue-lazyload": "^1.3.3"
+    "vuejs-paginate": "^2.1.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
